@@ -15,7 +15,6 @@
 	</parent>
 	<properties>
 		<maven.compiler.release>22</maven.compiler.release>
-		<maven.compiler.enablePreview>true</maven.compiler.enablePreview>
 		<module.name>nima.example</module.name>
 	</properties>
 	<dependencies>
@@ -64,7 +63,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.4.0</version>
 				<configuration>
-					<argLine>@{argLine} --enable-preview</argLine>
 					<useModulePath>false</useModulePath>
 				</configuration>
 			</plugin>
